--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
       scriptLocation: inlineScript
       inlineScript: |
         mkdir $(Build.SourcesDirectory)\BlobFile
-        az storage blob download --container-name "${{ parameters.containername }}" --file $(Build.SourcesDirectory)\BlobFile --name shellcode.bin --account-key "${{ parameters.accountkey }}" --account-name "${{ parameters.accountname }}"
+        az storage blob download --container-name "${{ parameters.containername }}" --file $(Build.SourcesDirectory)\BlobFile\shellcode.bin --name shellcode.bin --account-key "${{ parameters.accountkey }}" --account-name "${{ parameters.accountname }}"
 
   # Jigsaw Encrypt shellcode
   - task: PythonScript@0
